src/snapshots/transmute__parser__tests__access.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"forty . two ;\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "forty",
            "two",
        ],
        identifier_refs: [
            IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(0),
                    span: 1:1; [0, 5],
                },
            },
            IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:9; [8, 11],
                },
            },
        ],
        expressions: [
            Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(0),
                        span: 1:1; [0, 5],
                    },
                ),
                span: 1:1; [0, 5],
            },
            Expression {
                id: ExprId(1),
                kind: Access(
                    ExprId(0),
                    IdentRefId(1),
                ),
                span: 1:1; [0, 11],
            },
        ],
        statements: [
            Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(1),
                ),
                span: 1:1; [0, 13],
            },
        ],
        root: [
            StmtId(0),
        ],
    },
)
