src/snapshots/transmute__parser__tests__access_nested.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"forty . two . something;\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "forty",
            "two",
            "something",
        ],
        identifier_refs: [
            IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(0),
                    span: 1:1; [0, 5],
                    bound: Unbound,
                },
            },
            IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:9; [8, 11],
                    bound: Unbound,
                },
            },
            IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:15; [14, 23],
                    bound: Unbound,
                },
            },
        ],
        expressions: [
            Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(0),
                        span: 1:1; [0, 5],
                    },
                ),
                span: 1:1; [0, 5],
                typed: Untyped,
            },
            Expression {
                id: ExprId(1),
                kind: Access(
                    ExprId(0),
                    IdentRefId(1),
                ),
                span: 1:1; [0, 11],
                typed: Untyped,
            },
            Expression {
                id: ExprId(2),
                kind: Access(
                    ExprId(1),
                    IdentRefId(2),
                ),
                span: 1:1; [0, 23],
                typed: Untyped,
            },
        ],
        statements: [
            Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(2),
                ),
                span: 1:1; [0, 24],
            },
        ],
        root: [
            StmtId(0),
        ],
        symbols: [],
        types: [],
        state: ImplicitRet,
    },
)
