src/snapshots/transmute__parser__tests__empty_statement.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\";\")).parse()"
---
Ok(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [],
        statements: [],
        roots: [],
    },
)
