src/snapshots/transmute__parser__tests__empty_statement_followed_by_non_empty.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"; ret 42;\")).parse()"
---
Ok(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(42),
                        span: 1:7; [6, 8],
                    },
                ),
                span: 1:7; [6, 8],
            },
        ],
        statements: [
            Statement {
                id: StmtId(0),
                kind: Ret(
                    ExprId(0),
                    Explicit,
                ),
                span: 1:3; [2, 9],
            },
        ],
        roots: [
            StmtId(0),
        ],
    },
)
