src/snapshots/transmute__parser__tests__err_access.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"a.1;\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected number, expected one of identifier",
                span: 1:3; [2, 3],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    839,
                ),
            },
            Diagnostic {
                message: "Unexpected number, expected one of `;`, `.`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`",
                span: 1:3; [2, 3],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1340,
                ),
            },
        ],
    },
)
