src/snapshots/transmute__parser__tests__err_expression_missing_token_at_eof.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Number(
                            1,
                        ),
                        span: 1:1; [0, 1],
                    },
                ),
                span: 1:1; [0, 1],
            },
            Expression {
                id: ExprId {
                    id: 1,
                },
                kind: Dummy,
                span: 1:5; [4, 4],
            },
            Expression {
                id: ExprId {
                    id: 2,
                },
                kind: Binary(
                    ExprId {
                        id: 0,
                    },
                    BinaryOperator {
                        kind: Addition,
                        span: 1:3; [2, 3],
                    },
                    ExprId {
                        id: 1,
                    },
                ),
                span: 1:1; [0, 4],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 2,
                    },
                ),
                span: 1:1; [0, 4],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of identifier, number, `true`, `false`, `if`, `while`, `(`, `-`",
                span: 1:5; [4, 4],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    655,
                ),
            },
        ],
    },
)
